增加多配置机器人
